--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -31,12 +31,12 @@
   <tbody>
     <tr *ngFor="let category of categories">
       <td>
-        <strong>Lazer</strong><br>
-        <small>Cinema, praia, parque, etc</small>
+        <strong>{{category.name}}</strong><br>
+        <small>{{category.description}}</small>
       </td>
       <td>
         <a [routerLink]="[12,'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
-        <button (click)="alert('Excluido')" class="btn btn-outline-danger btn-sm">Deletar</button>
+        <button (click)="deleteCategory(category)" class="btn btn-outline-danger btn-sm">Deletar</button>
       </td>
     </tr>
   </tbody>
