--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  <form [formGroup]="categoryForm">
+  <form [formGroup]="categoryForm" (submit)="submitForm()">
     <div class="card">
       <div class="card-header">
         Informações sobre categoria
@@ -30,16 +30,23 @@
       <div class="form-row">
         <div class="form-group col-md-4">
           <label for="name">Nome</label>
-          <input type="text" class="form-control" id="name"/>
+          <input type="text" class="form-control" id="name" formControlName="name"/>
+
+          <div class="text-danger">
+            <div *ngIf="categoryForm.get('name').errors.required">Dado Obrigatório</div>
+            <div *ngIf="categoryForm.get('name').errors.required">Minimo 2 caracteres</div>
+          </div>
+
         </div>
+        
         <div class="form-group col-md-8">
           <label class="description">Descrição</label>
-          <input type="text" class="form-control" id="description"/>
+          <input type="text" class="form-control" id="description" formControlName="description"/>
         </div>
       </div>
     </div>
     </div>
 
-    <button type="submit" class="btn btn-success btn-lg mt-3 float-right">Salvar</button>
+    <button type="submit" [disabled]="submittingForm || categoryForm.invalid" class="btn btn-success btn-lg mt-3 float-right">Salvar</button>
 
   </form>
